Rename repository for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cnvs/canvas-theme-paper",
+    "name": "cnvs/paper",
     "description": "Default theme for Canvas",
     "keywords": ["canvas", "theme", "default"],
     "type": "canvas-theme",
